--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ AllCops:
     - 'vendor/**/*'
     - 'spec/fixtures/**/*'
     - 'tmp/**/*'
+    - 'db/**/*'
+    - 'lib/tasks/**/*'
     - '.git/**/*'
     - 'bin/*'
   TargetRubyVersion: 2.6
@@ -159,3 +161,12 @@ InternalAffairs/StyleDetectedApiUse:
 
 Gemspec/DependencyVersion:
   Enabled: true
+
+RSpec/ImplicitExpect:
+  Enabled: false
+
+Layout/RedundantLineBreak:
+  Enabled: false
+
+Style/Lambda:
+  Enabled: false
